# BoogieBot

./: .gitignore  README.md
src/: bpm_detector_launch.py  bpm_detector_pkg.py  bpm_detector_ros2.py  bpm_detector_xml.txt  bpm_visualization_node.py  readme.md
src/BoogieListen/scripts/: audio_publisher.py
src/xarmrob/: setup.py
src/xarmrob/config/: robot_xarm_info.yaml
src/xarmrob/launch/: boogiebot.launch.py  xarm_angle_sliders.launch.py  xarm_cmd_sliders.launch.py  xarm_cmd_sliders_param.launch.py  xarm_no_cmd.launch.py  xarm_no_cmd_param.launch.py
src/xarmrob/xarmrob/: angle_keyboard.py  angle_sliders.py  audio_publisher.py  audio_subscriber.py  boogie_commander.py  bpm_detector.py  bpm_publisher.py  cmd_keyboard.py  cmd_sliders.py  command_xarm.py  endpoint_automatic_smooth.py  endpoint_keyboard.py  mic_publisher.py  xarm_kinematics.py
src/xarmrob_interfaces/: CMakeLists.txt  package.xml
src/xarmrob_interfaces/action/: ME439MoveToTarget.action
src/xarmrob_interfaces/srv/: ME439XArmForwardKinematics.srv  ME439XArmInverseKinematics.srv
